[gd_scene load_steps=18 format=3 uid="uid://ciqspero1xa0e"]

[ext_resource type="PackedScene" uid="uid://8bdxswh8ihe0" path="res://actors/environments/Card.tscn" id="1"]
[ext_resource type="Script" uid="uid://1w2uiaue6t5k" path="res://map/draft/DraftCardGraphicNode.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://b3hxdirx1lbnc" path="res://assets/map/selector.png" id="3"]
[ext_resource type="Texture2D" uid="uid://glxoo30rpi68" path="res://assets/icon/minicards/star.png" id="4"]
[ext_resource type="FontFile" uid="uid://51vlffimyv6j" path="res://assets/fonts/bungee/Bungee-Regular.otf" id="5"]
[ext_resource type="FontFile" uid="uid://cmvmqjwssraau" path="res://assets/fonts/Commando/commando.ttf" id="6"]
[ext_resource type="FontFile" uid="uid://dprehv4eo4p4u" path="res://assets/fonts/Pixel-Powerline-440555/Pixel Powerline.otf" id="8"]
[ext_resource type="Texture2D" uid="uid://ddrhl0u5s0p6n" path="res://assets/icon/star_full06.png" id="9"]
[ext_resource type="Texture2D" uid="uid://0sxktppf5xpk" path="res://assets/sprites/ice_snowflake.png" id="10"]
[ext_resource type="Texture2D" uid="uid://couqw65fxdjum" path="res://assets/sprites/cards/half_card.png" id="11"]
[ext_resource type="Texture2D" uid="uid://igkqsrf7b7w3" path="res://assets/sprites/cards/back_prime.png" id="12"]
[ext_resource type="Texture2D" uid="uid://c6nom5xnpss1o" path="res://assets/sprites/cards/card.png" id="13"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("6")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="4"]
fallbacks = Array[Font]([ExtResource("6")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="6"]
fallbacks = Array[Font]([ExtResource("6")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("8")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("5")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[node name="DraftCard" instance=ExtResource("1")]
scale = Vector2(2, 2)
script = ExtResource("2")
take_ownership = true
multiple_owners = true
float_when_selected = false
order_id = 0

[node name="Thickness" type="Sprite2D" parent="Ground/Front" index="0"]
modulate = Color(0, 0, 0, 1)
position = Vector2(0, 5)
scale = Vector2(2, 2)
texture = ExtResource("13")

[node name="Background" parent="Ground/Front" index="1"]
modulate = Color(0.360784, 0.345098, 0.337255, 1)

[node name="HalfBackground" type="Sprite2D" parent="Ground/Front/Background" index="0"]
unique_name_in_owner = true
visible = false
position = Vector2(1, 1)
scale = Vector2(1.01, 1.01)
texture = ExtResource("11")

[node name="Border" parent="Ground/Front" index="4"]
visible = true
scale = Vector2(2.15, 2.1)

[node name="Suits" type="Node2D" parent="Ground/Front" index="8"]

[node name="SuitTopLeft" type="Sprite2D" parent="Ground/Front/Suits" index="0"]
unique_name_in_owner = true
position = Vector2(-94, -143)
scale = Vector2(0.35, 0.35)

[node name="SuitBottomRight" type="Sprite2D" parent="Ground/Front/Suits" index="1"]
unique_name_in_owner = true
position = Vector2(94, 144)
scale = Vector2(0.35, 0.35)
flip_v = true

[node name="MinigameIconShadow" type="Sprite2D" parent="Ground/Front" index="9"]
modulate = Color(0, 0, 0, 0.392157)
position = Vector2(0, -23)

[node name="MinigameIcon" type="Sprite2D" parent="Ground/Front" index="10"]
position = Vector2(0, -32)

[node name="MinigameLabelWrapper" type="Node2D" parent="Ground/Front" index="11"]
position = Vector2(0, 9)
scale = Vector2(0.5, 0.5)

[node name="MinigameLabel" type="Label" parent="Ground/Front/MinigameLabelWrapper" index="0"]
unique_name_in_owner = true
modulate = Color(1.12, 1.12, 1.12, 1)
offset_left = -900.0
offset_top = 20.0
offset_right = 900.0
offset_bottom = 334.0
theme_override_colors/font_shadow_color = Color(0.247059, 0.247059, 0.247059, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 4
theme_override_fonts/font = SubResource("1")
text = "MINIGAME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="WinterLabel" type="Label" parent="Ground/Front/MinigameLabelWrapper" index="1"]
visible = false
modulate = Color(0.615686, 0.921569, 1, 1)
self_modulate = Color(0.92, 0.92, 0.92, 1)
offset_left = -900.0
offset_top = -63.0
offset_right = 900.0
offset_bottom = 251.0
theme_override_colors/font_shadow_color = Color(0, 0.533333, 0.964706, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 4
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = SubResource("4")
text = "WINTER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Snowflake" type="Sprite2D" parent="Ground/Front/MinigameLabelWrapper/WinterLabel" index="0"]
position = Vector2(900, 375)
texture = ExtResource("10")

[node name="SnowflakeShadow" type="Sprite2D" parent="Ground/Front/MinigameLabelWrapper/WinterLabel/Snowflake" index="0"]
modulate = Color(0, 0.533333, 0.964706, 1)
show_behind_parent = true
position = Vector2(0, 6)
texture = ExtResource("10")

[node name="BottomLabel" type="Label" parent="Ground/Front/MinigameLabelWrapper" index="2"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 0.25098, 0.831373, 1)
offset_left = -900.0
offset_top = 97.0
offset_right = 900.0
offset_bottom = 411.0
theme_override_colors/font_shadow_color = Color(0.670588, 0, 0.345098, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 4
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = SubResource("6")
text = "PERFECTIONIST"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NewLabelWrapper" type="Node2D" parent="Ground/Front" index="12"]
position = Vector2(0, 14)
scale = Vector2(0.5, 0.5)

[node name="NewLabel" type="Label" parent="Ground/Front/NewLabelWrapper" index="0"]
unique_name_in_owner = true
visible = false
modulate = Color(1.2, 1.2, 1.2, 1)
self_modulate = Color(1, 0.870588, 0.372549, 1)
offset_left = -900.0
offset_top = -580.0
offset_right = 900.0
offset_bottom = -266.0
theme_override_fonts/font = SubResource("3")
text = "NEW!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Sprite2D" type="Sprite2D" parent="Ground/Front/NewLabelWrapper/NewLabel" index="0"]
position = Vector2(776, 157)
texture = ExtResource("4")

[node name="Sprite2" type="Sprite2D" parent="Ground/Front/NewLabelWrapper/NewLabel" index="1"]
position = Vector2(1024, 157)
texture = ExtResource("4")

[node name="PerfectionistStar" type="Sprite2D" parent="Ground/Front" index="13"]
unique_name_in_owner = true
visible = false
modulate = Color(1.2, 1.2, 1.2, 1)
self_modulate = Color(1, 0, 0.498039, 1)
position = Vector2(75, -150)
texture = ExtResource("9")

[node name="Label" type="Label" parent="Ground/Front/PerfectionistStar" index="0"]
offset_left = -50.0
offset_top = -43.0
offset_right = 50.0
offset_bottom = 57.0
theme_override_fonts/font = SubResource("5")
text = "P"
align = 1
valign = 1

[node name="Sprite2D" type="Sprite2D" parent="Ground/Front/PerfectionistStar" index="1"]
modulate = Color(0, 0, 0, 1)
show_behind_parent = true
position = Vector2(0, -1)
scale = Vector2(1.2, 1.2)
texture = ExtResource("9")

[node name="Shadow" type="Sprite2D" parent="Ground/Front/PerfectionistStar" index="2"]
modulate = Color(0, 0, 0, 0.235294)
show_behind_parent = true
position = Vector2(0, 5)
scale = Vector2(1.2, 1.2)
texture = ExtResource("9")

[node name="Thickness" type="Sprite2D" parent="Ground/Back" index="0"]
modulate = Color(0, 0, 0, 1)
position = Vector2(0, 5)
scale = Vector2(2, 2)
texture = ExtResource("13")

[node name="Background" parent="Ground/Back" index="1"]
visible = false

[node name="Internal" parent="Ground/Back" index="2"]
modulate = Color(1, 0.819608, 0.819608, 1)
texture = ExtResource("12")

[node name="Select" type="Sprite2D" parent="Ground" index="3"]
visible = false
position = Vector2(0, 347)
rotation = 3.14159
z_index = 2000
z_as_relative = false
texture = ExtResource("3")
